force-app/main/default/objects/Arquivo__c/Arquivo__c.object-meta.xml
<CustomObject>
    <label>Arquivo</label>
    <nameField>
        <displayFormat>Arquivo - {0}</displayFormat>
        <label>Nome do Arquivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Arquivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>