force-app/main/default/objects/Arquivo__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotações</label>
    <referenceTo>Cotacoes__c</referenceTo>
    <relationshipLabel>Arquivos</relationshipLabel>
    <relationshipName>Arquivos</relationshipName>
    <type>Lookup</type>
</CustomField>