force-app/main/default/objects/Arquivo__c/fields/FormularioCancelado__c.field-meta.xml
<CustomField>
    <fullName>FormularioCancelado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formulario Cancelado</label>
    <type>Checkbox</type>
</CustomField>