force-app/main/default/objects/Arquivo__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <formula>Name +&quot; &quot;+   Cotacao__r.Name + &quot; &quot; + Cotacao__r.Empresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome</label>
    <type>Text</type>
</CustomField>