force-app/main/default/objects/Arquivo__c/listViews/Nome_e_Criado.listView-meta.xml
<ListView>
    <fullName>Nome_e_Criado</fullName>
    <columns>Cotacao__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>Nome e Criado</label>
</ListView>